--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -11,18 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: "18" # Specify the Node.js version to use
+          node-version: "20"
 
       - name: Install Dependencies
         run: npm install
-
-      - name: Run Tests
-        run: npm test # Your test script goes here
 
       - name: Build
         run: npm run build # Your build script goes here
