--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: "recursive"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -29,11 +31,21 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push nginx image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./nginx
+          file: ./nginx/Dockerfile
+          push: true
+          tags: gishejs/nginx-reverse-proxy:latest,gishejs/nginx-reverse-proxy:${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Build and push node-app image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./node-app
+          file: ./node-app/Dockerfile
           push: true
           tags: gishejs/node-app:latest,gishejs/node-app:${{ github.sha }}
           cache-from: type=local,src=/tmp/.buildx-cache
