--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Update kubeconfig
         run: |
-          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name node-app
+          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name weed-node
 
       - name: Deploy to EKS
         run: |
