--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
 
         location / {
             # Proxy pass to the Node.js app
-            proxy_pass http://node-app:3000; # Ensure 'node-app' matches the service name in docker-compose.yml or ECS task definition
+            proxy_pass http://node-app-service:3000; # Ensure 'node-app' matches the service name in docker-compose.yml or ECS task definition
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
